@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11677] "getMimeType i CargoObjectInfo bør returnere en en MimeType og ikke konvertere til en streng"
    - bug [11730] "Bør vi ikke renavngive TargetFields til ITargetFields for at bibeholde navngivningen af interfaces?"
    - bug [11291] "Bør vi ikke renavngive ObjectIdentifier.java til IObjectIdentifier.java?"
    - bug [10534] "parallelisering i storeCargoContainer pluginet"
